Mention increase of JVM memory in IntelliJ How To Page (#484)
Gradle needs more memory to run correctly when using IntelliJ IDEA

Signed-off-by: Scott Gerlach <scott.gerlach@stackhawk.com>